--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="format-detection" content="telephone=no">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Star Snake</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -16,7 +18,6 @@
         <div id="main-menu" style="display: flex;">
             <div class="logo-container">
                 <h1 class="glow-text">Star Snake</h1>
-                <div class="logo-stars"></div>
             </div>
             <div id="score-container">
                 <div class="score-item">
@@ -32,19 +33,15 @@
             <div class="button-container">
                 <button class="button play-button" onclick="tryStartGame()">
                     <span class="button-text">Играть</span>
-                    <div class="button-glow"></div>
                 </button>
                 <button class="button shop-button" onclick="showShop()">
                     <span class="button-text">Магазин</span>
-                    <div class="button-glow"></div>
                 </button>
                 <button class="button tasks-button" onclick="showTasks()">
                     <span class="button-text">Задания</span>
-                    <div class="button-glow"></div>
                 </button>
                 <button class="button leaderboard-button" onclick="showLeaderboard()">
                     <span class="button-text">Таблица лидеров</span>
-                    <div class="button-glow"></div>
                 </button>
             </div>
         </div>
@@ -75,7 +72,6 @@
                     </div>
                     <button class="button shop-buy-button" onclick="buySunSkin()">
                         <span class="button-text">Купить</span>
-                        <div class="button-glow"></div>
                     </button>
                 </div>
                 <div class="shop-item premium">
@@ -86,7 +82,6 @@
                     </div>
                     <button class="button premium-button" onclick="buyPremiumSkin()">
                         <span class="button-text">Получить</span>
-                        <div class="button-glow"></div>
                     </button>
                 </div>
             </div>
@@ -104,11 +99,9 @@
                     <div class="task-buttons">
                         <button class="button task-button" onclick="window.open('https://t.me/mariartytt')">
                             <span class="button-text">Перейти</span>
-                            <div class="button-glow"></div>
                         </button>
                         <button class="button task-button" onclick="checkSubscription()">
                             <span class="button-text">Проверить</span>
-                            <div class="button-glow"></div>
                         </button>
                     </div>
                 </div>
@@ -121,11 +114,10 @@
             <div id="leaderboard-content" class="leaderboard-list"></div>
         </div>
 
-        <!-- Кнопка назад (только для подменю) -->
+        <!-- Кнопка назад -->
         <button class="button back-button" onclick="showMenu()">
             <span class="back-icon">←</span>
             <span class="button-text">Назад</span>
-            <div class="button-glow"></div>
         </button>
     </div>
 
