Fixed UI and timer issues

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                     <span id="sun-balance">0</span>
                 </div>
             </div>
+            <div id="timer" class="timer-container"></div>
             <div class="button-container">
                 <button class="button play-button" onclick="tryStartGame()">Играть</button>
                 <button class="button shop-button" onclick="showShop()">Магазин</button>
