--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <meta name="format-detection" content="telephone=no">
     <title>Star Snake</title>
-    <link rel="stylesheet" href="style.css?v=8">
+    <link rel="stylesheet" href="style.css?v=9">
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
@@ -16,28 +16,28 @@
                 <h1 class="glow-text">Star Snake</h1>
             </div>
             <div id="score-container">
-                <div class="score-item">
+                <div class="score-item glow">
                     <span>Лучший счет: </span>
                     <span id="best-score">0</span>
                 </div>
-                <div class="score-item">
+                <div class="score-item glow">
                     <span>☀️</span>
                     <span id="sun-balance">0</span>
                 </div>
             </div>
             <div id="timer" class="timer-container"></div>
             <div class="button-container">
-                <button class="button play-button" onclick="tryStartGame()">Играть</button>
-                <button class="button shop-button" onclick="showShop()">Магазин</button>
-                <button class="button tasks-button" onclick="showTasks()">Задания</button>
-                <button class="button leaderboard-button" onclick="showLeaderboard()">Таблица лидеров</button>
+                <button class="button play-button glow-button" onclick="tryStartGame()">Играть</button>
+                <button class="button shop-button glow-button" onclick="showShop()">Магазин</button>
+                <button class="button tasks-button glow-button" onclick="showTasks()">Задания</button>
+                <button class="button leaderboard-button glow-button" onclick="showLeaderboard()">Таблица лидеров</button>
             </div>
         </div>
 
         <!-- Игровой контейнер -->
         <div id="game-container">
             <div class="game-wrapper">
-                <div class="game-header">
+                <div class="game-header glow">
                     <div id="score">Score: 0</div>
                     <div id="sun-display">☀️ 0</div>
                 </div>
@@ -47,39 +47,39 @@
 
         <!-- Магазин -->
         <div id="shop-container">
-            <h2 class="section-title">Магазин</h2>
+            <h2 class="section-title glow-text">Магазин</h2>
             <div class="shop-items">
-                <div class="shop-item">
+                <div class="shop-item glow">
                     <div class="item-info">
                         <span class="item-name">Sun Скин</span>
                         <span class="item-price">1000 ☀️</span>
                         <span class="item-description">+10% к заработку sun</span>
                     </div>
-                    <button class="button shop-buy-button" onclick="buySunSkin()">Купить</button>
+                    <button class="button shop-buy-button glow-button" onclick="buySunSkin()">Купить</button>
                 </div>
-                <div class="shop-item premium">
+                <div class="shop-item premium glow">
                     <div class="item-info">
                         <span class="item-name">Premium Скин</span>
                         <span class="item-price">VIP</span>
                         <span class="item-description">+50% к заработку sun</span>
                     </div>
-                    <button class="button premium-button" onclick="buyPremiumSkin()">Получить</button>
+                    <button class="button premium-button glow-button" onclick="buyPremiumSkin()">Получить</button>
                 </div>
             </div>
         </div>
 
         <!-- Задания -->
         <div id="tasks-container">
-            <h2 class="section-title">Задания</h2>
+            <h2 class="section-title glow-text">Задания</h2>
             <div class="tasks-list">
-                <div class="task-item">
+                <div class="task-item glow">
                     <div class="task-info">
                         <span class="task-name">Подписаться на канал</span>
                         <span class="task-reward">Награда: 100 ☀️</span>
                     </div>
                     <div class="task-buttons">
-                        <button class="button task-button" onclick="window.open('https://t.me/mariartytt')">Перейти</button>
-                        <button class="button task-button" onclick="checkSubscription()">Проверить</button>
+                        <button class="button task-button glow-button" onclick="window.open('https://t.me/mariartytt')">Перейти</button>
+                        <button class="button task-button glow-button" onclick="checkSubscription()">Проверить</button>
                     </div>
                 </div>
             </div>
@@ -87,13 +87,13 @@
 
         <!-- Таблица лидеров -->
         <div id="leaderboard-container">
-            <h2 class="section-title">Таблица лидеров</h2>
+            <h2 class="section-title glow-text">Таблица лидеров</h2>
             <div id="leaderboard-content" class="leaderboard-list"></div>
         </div>
     </div>
 
     <!-- Кнопка назад -->
-    <button class="button back-button" onclick="showMenu()">
+    <button class="button back-button glow-button" onclick="showMenu()">
         <span>← Назад</span>
     </button>
 
